--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/oncepal/opui#readme",
   "devDependencies": {
     "@oncepal/typescript-config": "*",
+    "@oncepal/utils":"*",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
